<resources>
    <string name="app_name">Story App</string>
    <string name="e_mail_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="login">LOGIN</string>
    <string name="nama">Nama</string>
    <string name="daftar">DAFTAR</string>
    <string name="error_password_minimal">Password harus terdiri dari minimal 8 karakter</string>
    <string name="error_email_invalid">Format email salah\nContoh: tes@gmail.com</string>
    <string name="name">Nama</string>
    <string name="desc">Deskripsi</string>
    <string name="menu_logout">Keluar</string>
    <string name="add_story_btn">Tambah story</string>
    <string name="camera_x">CameraX</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_menu">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Coba lagi</string>
</resources>